# Loom

./: .gitignore  Agent.md  Agent.md.example  CLAUDE.md  CODE_REVIEW.md  PLAN.md  README.md  SOUL.md  SOUL.md.example  UI_ISSUE_TEMPLATE.md  analysis_results.md  loom.toml  loom.toml.example  pyproject.toml  pytest_output.txt
doc/: 00-總覽.md  01-名詞解釋.md  02-系統架構.md  03-目錄結構.md  04-Harness-概述.md  05-Trust-Level.md  06-Middleware-詳解.md  06b-Action-Lifecycle.md  07-Tool-Registry.md  08-Memory-概述.md  08b-Memory-Governance.md  09-四種記憶詳解.md  10-Skill-Genome.md  10b-Skill-Evolution.md  11-Memory-Search.md  12-Memory-Index.md  12b-Memory-Health.md  13-Cognition-概述.md  14-LLM-Router.md  15-Context-Budget.md  16-Reflection-API.md  17-Task-Engine.md  18-Task-Scheduler.md  19-Autonomy-概述.md  20-觸發器詳解.md  21-Action-Planner.md  22-Autonomy-Daemon.md  23-Notification-概述.md  24-Notifier-適配器.md  24b-Notification-Types.md  25-ConfirmFlow.md  26-Prompt-Stack.md  27-SOUL-設計.md  28-Personalities.md  29-Extensibility-概述.md  30-Lens-系統.md  31-Plugin-系統.md  31b-MCP-Server-實作.md  32-Skill-Import.md  33-CLI-命令.md  (+29 more)
loom/: __init__.py
personalities/: adversarial.md  architect.md  barista.md  minimalist.md  operator.md  researcher.md
tests/: analysis_results.md  test_abort.py  test_app.py  test_architecture_guards.py  test_autonomy.py  test_batch_diagnostic.py  test_cache_display.py  test_cognition.py  test_confirm_parity.py  test_discord_embed_v2.py  test_discord_safe_send.py  test_discord_select_tool.py  test_discord_slash_commands.py  test_event_consumer_map.py  test_extensibility.py  (+46 more)
(+185 files in other folders)
