[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom"
version = "0.2.3"
description = "Harness-first, memory-native, self-directing agent framework"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=2.0.0",
    "aiosqlite>=0.20.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0",
    "textual>=0.60.0",
    "httpx>=0.27.0",
]

[project.scripts]
loom = "loom.platform.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["loom"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=1.0"]
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
discord = ["discord.py>=2.3.0"]
